--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     // Mapsforge (LGPLv3)
@@ -31,4 +30,6 @@ dependencies {
     compile 'org.mapsforge:mapsforge-map-android:0.6.0'
     compile 'com.caverock:androidsvg:1.2.2-beta-1'
     compile 'org.apache.commons:commons-io:1.3.2'
+    // Jcoord (GPL)
+    compile files('libs/jcoord-1.0.jar')
 }
