--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,14 +22,15 @@ android {
 dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
-    // Mapsforge (LGPLv3)
+    // Mapsforge (LGPLv3) https://github.com/mapsforge/mapsforge
     compile 'org.mapsforge:mapsforge-core:0.6.0'
     compile 'org.mapsforge:mapsforge-map:0.6.0'
     compile 'org.mapsforge:mapsforge-map-reader:0.6.0'
-    compile 'net.sf.kxml:kxml2:2.3.0'
     compile 'org.mapsforge:mapsforge-map-android:0.6.0'
-    compile 'com.caverock:androidsvg:1.2.2-beta-1'
+    // AndroidSVG (Apache 2.0) https://bigbadaboom.github.io/androidsvg/
+    compile 'com.caverock:androidsvg:1.2.1'
+    // Commons IO (Apache 2.0) https://commons.apache.org/proper/commons-io/
     compile 'org.apache.commons:commons-io:1.3.2'
-    // Jcoord (GPL)
+    // Jcoord (GPL) http://www.jstott.me.uk/jcoord/
     compile files('libs/jcoord-1.0.jar')
 }
