--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="org.samcrow.ridgesurvey"
+<manifest xmlns:tools="http://schemas.android.com/tools"
+          package="org.samcrow.ridgesurvey"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <!-- Write external storage for tile cache -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- Location for navigation -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <!-- Purpose of configChanges: Don't restart when these things change
          (A bug, probably a memory leak, triggers an OutOfMemoryError when the activity
          is restarted too often) -->
