--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,11 +24,11 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "org.samcrow.ridgesurvey"
+        applicationId "org.samcrow.jrbpsurvey"
         minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
     }
     buildTypes {
         release {
