--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,6 @@ dependencies {
     compile 'com.caverock:androidsvg:1.2.1'
     // Commons IO (Apache 2.0) https://commons.apache.org/proper/commons-io/
     compile 'org.apache.commons:commons-io:1.3.2'
-    // Jcoord (GPL) http://www.jstott.me.uk/jcoord/
+    // Jcoord (GPLv2) http://www.jstott.me.uk/jcoord/
     compile files('libs/jcoord-1.0.jar')
 }
