--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,19 +43,20 @@ android {
 }
 
 dependencies {
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.3.1'
     // Joda time (Apache 2.0) http://www.joda.org/joda-time/
-    compile 'joda-time:joda-time:2.9.2'
     // Mapsforge (LGPLv3) https://github.com/mapsforge/mapsforge
+    // AndroidSVG (Apache 2.0) https://bigbadaboom.github.io/androidsvg/
+    // Commons IO (Apache 2.0) https://commons.apache.org/proper/commons-io/
+    // Jcoord (GPLv2) http://www.jstott.me.uk/jcoord/
+    compile files('libs/jcoord-1.0.jar')
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'joda-time:joda-time:2.9.2'
     compile 'org.mapsforge:mapsforge-core:0.6.1'
     compile 'org.mapsforge:mapsforge-map:0.6.1'
     compile 'org.mapsforge:mapsforge-map-reader:0.6.1'
     compile 'org.mapsforge:mapsforge-map-android:0.6.1'
-    // AndroidSVG (Apache 2.0) https://bigbadaboom.github.io/androidsvg/
     compile 'com.caverock:androidsvg:1.2.1'
-    // Commons IO (Apache 2.0) https://commons.apache.org/proper/commons-io/
     compile 'org.apache.commons:commons-io:1.3.2'
-    // Jcoord (GPLv2) http://www.jstott.me.uk/jcoord/
-    compile files('libs/jcoord-1.0.jar')
+    compile 'com.android.support:support-v4:25.3.1'
+    testCompile 'junit:junit:4.12'
 }
