--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "org.samcrow.jrbpsurvey"
@@ -48,14 +48,14 @@ dependencies {
     // AndroidSVG (Apache 2.0) https://bigbadaboom.github.io/androidsvg/
     // Commons IO (Apache 2.0) https://commons.apache.org/proper/commons-io/
     // Jcoord (GPLv2) http://www.jstott.me.uk/jcoord/
-    compile files('libs/jcoord-1.0.jar')
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'joda-time:joda-time:2.9.2'
-    compile 'org.mapsforge:mapsforge-core:0.6.1'
-    compile 'org.mapsforge:mapsforge-map:0.6.1'
-    compile 'org.mapsforge:mapsforge-map-android:0.6.1'
-    compile 'com.caverock:androidsvg:1.2.1'
-    compile 'org.apache.commons:commons-io:1.3.2'
-    compile 'com.android.support:support-v4:25.3.1'
-    testCompile 'junit:junit:4.12'
+    implementation files('libs/jcoord-1.0.jar')
+    implementation 'com.android.support:appcompat-v7:25.4.0'
+    implementation 'joda-time:joda-time:2.9.2'
+    implementation 'org.mapsforge:mapsforge-core:0.6.1'
+    implementation 'org.mapsforge:mapsforge-map:0.6.1'
+    implementation 'org.mapsforge:mapsforge-map-android:0.6.1'
+    implementation 'com.caverock:androidsvg:1.2.1'
+    implementation 'org.apache.commons:commons-io:1.3.2'
+    implementation 'com.android.support:support-v4:25.4.0'
+    testImplementation 'junit:junit:4.12'
 }
