--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,5 +59,7 @@ dependencies {
     implementation 'com.caverock:androidsvg:1.3'
     implementation 'org.apache.commons:commons-io:1.3.2'
     implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:gridlayout-v7:28.0.0'
     testImplementation 'junit:junit:4.12'
 }
