--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,8 @@ android {
         applicationId "org.samcrow.jrbpsurvey"
         minSdkVersion 14
         targetSdkVersion 29
-        versionCode 16
-        versionName "1.4.0"
+        versionCode 17
+        versionName "1.5.0-beta1"
     }
     buildTypes {
         release {
