--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,8 @@ android {
         applicationId "org.samcrow.jrbpsurvey"
         minSdkVersion 14
         targetSdkVersion 29
-        versionCode 17
-        versionName "1.5.0-beta1"
+        versionCode 18
+        versionName "1.5.0"
     }
     buildTypes {
         release {
