--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,13 @@ android {
         targetSdkVersion 29
         versionCode 18
         versionName "1.5.0"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
+
     }
     buildTypes {
         release {
@@ -40,6 +47,11 @@ android {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
     }
+
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
 }
 
 dependencies {
@@ -49,8 +61,8 @@ dependencies {
     // Commons IO (Apache 2.0) https://commons.apache.org/proper/commons-io/
     // Jcoord (GPLv2) http://www.jstott.me.uk/jcoord/
     implementation files('libs/jcoord-1.0.jar')
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'joda-time:joda-time:2.9.9'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'joda-time:joda-time:2.10.10'
     // Upgrading mapsforge to 0.12 causes performance problems and/or vector layer glitches on
     // Samsung Galaxy Tab 3 Lite devices
     implementation 'org.mapsforge:mapsforge-core:0.11.0'
@@ -58,8 +70,13 @@ dependencies {
     implementation 'org.mapsforge:mapsforge-map-android:0.11.0'
     implementation 'com.caverock:androidsvg:1.3'
     implementation 'org.apache.commons:commons-io:1.3.2'
-    implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'com.android.support:cardview-v7:28.0.0'
-    implementation 'com.android.support:gridlayout-v7:28.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
     testImplementation 'junit:junit:4.12'
+
+    def room_version = "2.3.0"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
 }
