--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
 
     defaultConfig {
         applicationId "org.samcrow.jrbpsurvey"
-        minSdkVersion 14
+        minSdkVersion 16
         targetSdkVersion 29
         versionCode 19
         versionName "1.6.0"
@@ -52,6 +52,9 @@ android {
         sourceCompatibility 1.8
         targetCompatibility 1.8
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -73,6 +76,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0'
     testImplementation 'junit:junit:4.12'
 
     def room_version = "2.3.0"
