--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,12 +21,12 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 31
-    buildToolsVersion '29.0.2'
 
     defaultConfig {
         applicationId "org.samcrow.jrbpsurvey"
+        namespace "org.samcrow.ridgesurvey"
         minSdkVersion 16
-        targetSdkVersion 31
+        targetSdkVersion 33
         versionCode 26
         versionName "1.8.2"
 
@@ -54,6 +54,7 @@ android {
     }
     buildFeatures {
         viewBinding true
+        buildConfig true
     }
 }
 
