--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,22 +1,3 @@
-/*
- * Copyright 2017 Sam Crow
- *
- * This file is part of JRBP Survey.
- *
- * JRBP Survey is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * JRBP Survey is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with JRBP Survey.  If not, see <http://www.gnu.org/licenses/>.
- */
-
 apply plugin: 'com.android.application'
 
 android {
@@ -63,8 +44,6 @@ dependencies {
     // Mapsforge (LGPLv3) https://github.com/mapsforge/mapsforge
     // AndroidSVG (Apache 2.0) https://bigbadaboom.github.io/androidsvg/
     // Commons IO (Apache 2.0) https://commons.apache.org/proper/commons-io/
-    // Jcoord (GPLv2) http://www.jstott.me.uk/jcoord/
-    implementation files('libs/jcoord-1.0.jar')
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'joda-time:joda-time:2.10.10'
     // Upgrading mapsforge to 0.12 causes performance problems and/or vector layer glitches on
@@ -79,6 +58,7 @@ dependencies {
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.0'
+    implementation project(':utm')
     testImplementation 'junit:junit:4.12'
 
     def room_version = "2.3.0"
