--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,3 @@
-/*
- * Copyright 2017 Sam Crow
- *
- * This file is part of JRBP Survey.
- *
- * JRBP Survey is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * JRBP Survey is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with JRBP Survey.  If not, see <http://www.gnu.org/licenses/>.
- */
-
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
@@ -26,6 +7,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.4.1'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
