--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 31
 
     defaultConfig {
-        applicationId "org.samcrow.jrbpsurvey"
+        applicationId "io.github.samcrow.jrbpsurvey"
         namespace "org.samcrow.ridgesurvey"
         minSdkVersion 16
         targetSdkVersion 33
