--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,13 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 34
 
     defaultConfig {
         applicationId "io.github.samcrow.jrbpsurvey"
         namespace "org.samcrow.ridgesurvey"
-        minSdkVersion 16
+        minSdkVersion 23
         targetSdkVersion 33
         versionCode 29
         versionName "1.8.5"
@@ -32,6 +33,9 @@ android {
     compileOptions {
         sourceCompatibility 1.8
         targetCompatibility 1.8
+    }
+    kotlinOptions {
+        jvmTarget = 17
     }
     buildFeatures {
         viewBinding true
@@ -60,6 +64,9 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.0'
     implementation project(':utm')
     testImplementation 'junit:junit:4.12'
+
+    // MapLibre
+    implementation 'org.maplibre.gl:android-sdk:12.0.1'
 
     def room_version = "2.3.0"
     implementation "androidx.room:room-runtime:$room_version"
