--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     defaultConfig {
         applicationId "io.github.samcrow.jrbpsurvey"
         namespace "org.samcrow.ridgesurvey"
-        minSdkVersion 23
+        minSdkVersion 26
         targetSdkVersion 33
         versionCode 29
         versionName "1.8.5"
@@ -31,8 +31,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility 1.8
-        targetCompatibility 1.8
+        sourceCompatibility 17
+        targetCompatibility 17
     }
     kotlinOptions {
         jvmTarget = 17
@@ -63,6 +63,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.0'
     implementation project(':utm')
+    implementation project(':tileserver')
     testImplementation 'junit:junit:4.12'
 
     // MapLibre
