--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,21 +45,18 @@ android {
 
 dependencies {
     // Joda time (Apache 2.0) http://www.joda.org/joda-time/
-    // Mapsforge (LGPLv3) https://github.com/mapsforge/mapsforge
-    // AndroidSVG (Apache 2.0) https://bigbadaboom.github.io/androidsvg/
     // Commons IO (Apache 2.0) https://commons.apache.org/proper/commons-io/
+    // MapLibre (BSD 2-clause) https://github.com/maplibre/maplibre-native/blob/main/LICENSE.md
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'joda-time:joda-time:2.10.10'
     implementation 'org.apache.commons:commons-io:1.3.2'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.0'
     testImplementation 'junit:junit:4.12'
 
     // MapLibre
-    implementation 'org.maplibre.gl:android-sdk:12.0.1'
+    implementation 'org.maplibre.gl:android-sdk:12.2.0'
 
     def room_version = "2.3.0"
     implementation "androidx.room:room-runtime:$room_version"
