--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 34
+    compileSdkVersion 36
 
     defaultConfig {
         applicationId "io.github.samcrow.jrbpsurvey"
@@ -48,18 +48,19 @@ dependencies {
     // Joda time (Apache 2.0) http://www.joda.org/joda-time/
     // Commons IO (Apache 2.0) https://commons.apache.org/proper/commons-io/
     // MapLibre (BSD 2-clause) https://github.com/maplibre/maplibre-native/blob/main/LICENSE.md
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'joda-time:joda-time:2.10.10'
+    implementation 'androidx.appcompat:appcompat:1.7.1'
+    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.1.0'
+    implementation 'joda-time:joda-time:2.14.0'
     implementation 'org.apache.commons:commons-io:1.3.2'
-    implementation 'androidx.gridlayout:gridlayout:1.0.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.0'
-    testImplementation 'junit:junit:4.12'
+    implementation 'androidx.gridlayout:gridlayout:1.1.0'
+    implementation 'com.google.android.material:material:1.13.0'
+    implementation 'androidx.recyclerview:recyclerview:1.4.0'
+    testImplementation 'junit:junit:4.13.2'
 
     // MapLibre
     implementation 'org.maplibre.gl:android-sdk:12.2.0'
 
-    def room_version = "2.3.0"
+    def room_version = "2.8.4"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
